--- a/public/slides/3dd3/html/graph.html
+++ b/public/slides/3dd3/html/graph.html
@@ -1,16 +1,16 @@
 <style>
 
-    @keyframes animate-cube {
+    @keyframes graph-animate-cube {
         33% {transform: rotateX(360deg) rotateY(0deg) rotateZ(0deg)}
         66% {transform: rotateX(360deg) rotateY(360deg) rotateZ(0deg)}
         66% {transform: rotateX(360deg) rotateY(360deg) rotateZ(360deg)}
     }
 
-    .animate-cube {
-        animation: animate-cube 20s infinite ease-in-out;
+    #graph .animate-cube {
+        animation: graph-animate-cube 20s infinite ease-in-out;
     }
 
-    .with-image {
+    #graph .with-image {
         background-image: url("./img/angels.png");
         background-size: cover;
         background-position: left top;
