refactor graph.js

--- a/public/slides/3dd3/html/backAndFront.html
+++ b/public/slides/3dd3/html/backAndFront.html
@@ -18,9 +18,17 @@
 
 <div class="flipper"></div>
 
+<script src="./lib/dynamics.js"></script>
+<script src="./slides/3dd3/html/backAndFront.js"></script>
 <script>
 
+    /* global slidAR */
+
     (function () {
+
+        slidAR.steps.set("backAndFront", [
+            {f: _backAndFront_polar}
+        ])
 
     })()
 
