--- a/public/slides/3dd3/html/graph.html
+++ b/public/slides/3dd3/html/graph.html
@@ -37,7 +37,8 @@
 </div>
 
 <script src="./lib/dynamics.js"></script>
-<script src="./slides/3dd3/html/graph.js"></script>
+<script src="./slides/3dd3/js/graph.js"></script>
+<script src="./slides/3dd3/js/chart.js"></script>
 <script>
 
     /* global Chart */
