remove context vars

--- a/public/slides/3dd3/html/backAndFront.html
+++ b/public/slides/3dd3/html/backAndFront.html
@@ -19,6 +19,7 @@
 <div class="flipper"></div>
 
 <script src="./lib/dynamics.js"></script>
+<script src="./slides/3dd3/js/chart.js"></script>
 <script src="./slides/3dd3/html/backAndFront.js"></script>
 <script>
 
