--- a/public/slides/3dd3/html/backAndFront.html
+++ b/public/slides/3dd3/html/backAndFront.html
@@ -1,14 +1,48 @@
 <style>
 
-    .flipper {
+    #backAndFront .flipper {
+        top: 40vh;
+        left: 40vw;
+        border-width: 1px;
+        border-style: solid;
+    }
+
+    .background {
+        position: absolute;
         width: 200px;
         height: 200px;
         background-color: white;
-        border-width: 1px;
-        border-style: solid;
+    }
+
+    .second-background {
+        top: 0;
+        left: 0;
+    }
+
+    #backAndFront .inner {
         position: absolute;
-        top: 40vh;
-        left: 40vw;
+        top: 0;
+        left: 0;
+        width: 200px;
+        height: 200px;
+    }
+
+    @keyframes flip-animation {
+        100% {transform: rotateY(180deg)}
+    }
+
+    .flip {
+        animation: flip-animation 1s ease-in-out;
+        animation-fill-mode: forwards;
+    }
+
+    @keyframes flip-back-animation {
+        100% {transform: rotateY(-180deg)}
+    }
+
+    .flip-back {
+        animation: flip-back-animation 1s ease-in-out;
+        animation-fill-mode: forwards;
     }
 
 </style>
@@ -16,19 +50,39 @@
 <div class="slidecounter"></div>
 <div class="code"></div>
 
-<div class="flipper"></div>
+<div class="flipper background">
+</div>
 
 <script src="./lib/dynamics.js"></script>
 <script src="./slides/3dd3/js/chart.js"></script>
-<script src="./slides/3dd3/html/backAndFront.js"></script>
+<script src="./slides/3dd3/js/backAndFront.js"></script>
 <script>
 
     /* global slidAR */
 
     (function () {
 
+        function pie() {
+            window._backAndFront_pie("#backAndFront .flipper", 200, 200, "canvas-pie");
+        }
+
+        function _pie() {
+            window._backAndFront_clean_pie("#backAndFront .flipper");
+        }
+
+        const flipOuterStep = slidAR.classUtil.setClassStepWithReverse("#backAndFront .flipper", "flip");
+        const flipOuterBackStep = slidAR.classUtil.setClassStepWithReverse("#backAndFront .flipper", "flip-back");
+
+        const flipStep = slidAR.classUtil.setClassStep("#backAndFront .canvas-pie", "flip");
+
+        const secondBackgroundStep = slidAR.createElement.divStep("#backAndFront .flipper", "backAndFront-second", ["background", "second-background"], "");
+
         slidAR.steps.set("backAndFront", [
-            {f: _backAndFront_polar}
+            {f: pie, b: _pie},
+            secondBackgroundStep,
+            flipOuterStep.step,
+            flipOuterBackStep.step,
+            slidAR.steps.combine2StepsDelayed(flipOuterBackStep.step, flipOuterStep.reverseStep, 1000),
         ])
 
     })()
